# forge_of_stories

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  WARP.md  Wizard Project Structure Refactoring  cert.key  cert.pem  combined_source.md  docker-compose.yaml
crates/aether/: Cargo.toml
crates/aether/src/: aether.rs  bevy.rs  main.rs
crates/aether/src/bevy/: settings_bridge.rs
crates/aether_config/: Cargo.toml
crates/aether_config/src/: bevy.rs  lib.rs
crates/app/: Cargo.toml
crates/app/examples/: basic_app.rs  bevy_app.rs
crates/app/src/: app.rs
crates/backend/loopback/: Cargo.toml
crates/backend/loopback/src/: client.rs  lib.rs  server.rs  tcp.rs
crates/backend/loopback/tests/: backend.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: lib.rs  main.rs
crates/forge_app/src/attributes/: components.rs  mod.rs  plugin.rs  systems.rs
crates/forge_app/src/ui/: mod.rs
crates/forge_of_stories/: Cargo.toml
crates/forge_of_stories/src/: app.rs  client.rs  fos_app.rs  lib.rs  main.rs  server.rs  ui.rs  utils.rs
crates/forge_of_stories/src/client/: camera_control.rs  plugin.rs
crates/forge_of_stories/src/input/: menu.rs  mod.rs  player.rs
crates/forge_of_stories/src/networking/: client.rs  interpolation.rs  mod.rs  replication.rs
crates/forge_of_stories/src/rendering/: assets.rs  lighting.rs  mod.rs  visual_spawners.rs
crates/forge_of_stories/src/server/: embedded.rs  mod.rs
crates/forge_of_stories/src/ui/: cameras.rs  components.rs  normal_vector.rs  scenes.rs
crates/forge_of_stories/src/ui/cameras/: README.md  ReadCamera.md  cursor.rs  defaults.rs  first_person.rs  main_menu.rs  mode_handler.rs  pan_orbit.rs  splashscreen.rs  transition.rs  ui_camera.rs
crates/forge_of_stories/src/ui/scenes/: in_game.rs  in_game_menu.rs  main_menu.rs  splashscreen.rs
crates/game_server/: Cargo.toml  README.md  bevy_replicon.md
crates/game_server/src/: app.rs  components.rs  error.rs  lib.rs  messages.rs  movement.rs  network.rs  plugin.rs  protocol.rs  savegame.rs  settings.rs  systems.rs  world.rs  world_setup.rs
crates/game_server/src/gameplay/: mod.rs  physics.rs  player_input.rs
crates/game_server/src/network/: mod.rs
crates/game_server/src/shared/: components.rs  events.rs  mod.rs
crates/game_server/src/world/: components.rs  mod.rs  setup.rs
crates/keymap/: ARCHITECTURE.md  Cargo.toml  NEXT_STEPS.md  README.md  bevy_enhanced_input.md
crates/keymap/examples/: decentralized_registration.rs
crates/keymap/src/: action.rs  actions.rs  bevy.rs  binding.rs  context.rs  defaults.rs  enhanced.rs  keymap.rs  keystroke.rs  lib.rs  plugin.rs  spec.rs  store.rs
crates/network/client/: Cargo.toml
crates/network/client/src/: bevy.rs  certificate.rs  config.rs  connection.rs  discovery.rs  error.rs  events.rs  lib.rs  main.rs  metrics.rs  runtime.rs  sync.rs  transport.rs
crates/network/client/src/steam/: discovery.rs  discovery_stub.rs  mod.rs  real.rs  stub.rs
crates/network/client/src/transport/: mod.rs  quic.rs
crates/network/server/: Cargo.toml
crates/network/server/src/: auth.rs  bevy.rs  certificate.rs  config.rs  discovery.rs  error.rs  extensions.rs  lib.rs  main.rs  metrics.rs  plugin.rs  routing.rs  runtime.rs  server.rs  session.rs  settings.rs  steam.rs  transport.rs  wizard.rs
crates/network/server/src/protocol/: codec.rs  frames.rs  handshake.rs  metrics.rs  (+1 more)
crates/network/shared/: Cargo.toml
crates/network/shared/src/: channels.rs  config.rs  discovery.rs  env.rs  envelope.rs  error.rs  events.rs  ids.rs  lib.rs  messages.rs  messaging.rs  protocol.rs  serialization.rs  session.rs
crates/network/shared/tests/: loopback_integration.rs
crates/networking/game_protocol/: Cargo.toml
crates/networking/game_protocol/src/: lib.rs
crates/networking/shared/: Cargo.toml
crates/networking/shared/src/: bevy.rs  channels.rs  lib.rs
crates/networking/shared/tests/: loopback_integration.rs
crates/server_logic/: Cargo.toml
crates/server_logic/src/: lib.rs  movement.rs  network.rs  protocol.rs  savegame.rs  systems.rs  world.rs  world_setup.rs
crates/settings/: Cargo.toml  README.md  USAGE.de.md  readme.md  zed_settings_kernidee.md
crates/settings/assets/keymaps/: default-wizard.toml  wizard-default.toml
crates/settings/assets/settings/: aether-default.toml  cli-default.toml  client-default.toml  global.toml  server-default.toml  wizard-default.toml  wizard.toml
crates/settings/memories/: base_keymap_setting_rs_analysis.md  editable_setting_control_rs_analysis.md  keymap_file_rs_analysis.md  settings_file_rs_analysis.md  settings_json_rs_analysis.md  settings_profile_selector_analysis.md  settings_profile_selector_rs_analysis.md  settings_rs_analysis.md  settings_store_rs_analysis.md
crates/settings/plan/: base_keymap_setting_rs_plan.md  editable_setting_control_rs_plan.md  game_input_profile_plan.md  game_settings_architecture.md  game_settings_rs_plan.md  keymap_file_rs_plan.md  settings_file_rs_plan.md  settings_json_rs_plan.md  settings_profile_selector_plan.md  settings_profile_selector_rs_plan.md  settings_rs_plan.md  settings_store_rs_plan.md
crates/settings/src/: assets.rs  bevy_adapter.rs  embedded.rs  errors.rs  file_toml_source.rs  in_memory.rs  json_merge.rs  json_utils.rs  key_path.rs  keymap.rs  lib.rs  settings.rs  simple_path_resolver.rs  source.rs  store.rs
crates/settings/src/keymap/: action.rs  base_key.rs  binding_adapter.rs  load_result.rs  source.rs  update.rs  validation.rs
crates/settings/src/settings/: editble.rs  location.rs  read_write.rs  source.rs  store.rs  toml.rs  value.rs
crates/settings/tests/: settings_store.rs
crates/ui/fate/: Cargo.toml
crates/ui/fate/src/: assets.rs  fate.rs  main.rs  themes.rs
crates/ui/wizard/: Cargo.toml  todo.md
crates/ui/wizard/.config/: config.json5
crates/ui/wizard/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  intent.rs  layers.rs  lib.rs  logging.rs  main.rs  messages.rs  pages.rs  popup.rs  services.rs  settings.rs  state.rs  style.rs  theme.rs  tui.rs  ui.rs  wizard.rs
(+382 files in other folders)
