[workspace]
resolver = "2"
members = [
    "crates/aether",
    "crates/aether_config",
    "crates/forge_of_stories",
    "crates/paths",
    "crates/settings",
    "crates/app",
    "crates/network/client",
    "crates/network/server",
    "crates/network/shared",
    "crates/ui/fate",
    "crates/ui/illusion",
    "crates/ui/oracle",
    "crates/ui/wizard",
]
default-members = ["crates/forge_of_stories", "crates/ui/wizard"]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
aether.path = "crates/aether"
aether_config.path = "crates/aether_config"
app.path = "crates/app"
client.path = "crates/network/client"
fate.path = "crates/ui/fate"
fos.path = "crates/forge_of_stories"
illusion.path = "crates/ui/illusion"
network_shared.path = "crates/network/shared"
oracle.path = "crates/ui/oracle"
paths.path = "crates/paths"
settings.path = "crates/settings"
server.path = "crates/network/server"
wizard.path = "crates/ui/wizard"


#

anyhow = { version = "1.0.80" }
axum = { version = "0.8.4", features = ["json", "ws"] }
bincode = { version = "2.0.1", features = ["serde"] }
bitflags = { version = "2.9.3", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29.0"
dirs = "4.0"
futures = { version = "0.3.28" }
globset = "0.4"
log = "0.4.27"
ratatui = "0.29.0"
rcgen = { version = "0.14", features = [
    "pem",
    "aws_lc_rs",
], default-features = false }
regex = "1.5"
rust-embed = { version = "8.4", features = ["include-exclude"] }
rustls = { version = "0.23", features = ["aws-lc-rs", "log"] }
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.6", features = ["union"] }
thiserror = { version = "2.0.14", features = ["std"] }
time = { version = "0.3.41", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.34", features = ["full"] }
toml = { version = "0.9.5" }
toml_edit = "0.23.3"
unicase = "2.6"
uuid = { version = "1.18.1", features = ["v4"] }
quinn = { version = "0.11.8" }
