[workspace]
resolver = "2"
members = [
    "crates/forge_of_stories",
    "crates/paths",
    "crates/settings",
    "crates/app",
    "crates/networking/client",
    "crates/networking/server",
    "crates/networking/shared",
    "crates/networking/game_protocol",
    "crates/game_server",
    "crates/keymap",
    "third_party/steamworks-sys",
]
default-members = ["crates/forge_of_stories"]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
app.path = "crates/app"
shared.path = "crates/networking/shared"
client.path = "crates/networking/client"
server.path = "crates/networking/server"
game_protocol.path = "crates/networking/game_protocol"
fos.path = "crates/forge_of_stories"
paths.path = "crates/paths"
settings.path = "crates/settings"
game_server.path = "crates/game_server"
steamworks-sys.path = "third_party/steamworks-sys"

#

anyhow = { version = "1.0.80" }
axum = { version = "0.8.4", features = ["json", "ws"] }
base64 = "0.22.1"
bevy = { version = "0.17.2", default-features = false }
bincode = { version = "2.0.1", features = ["serde"] }
bitflags = { version = "2.9.3", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29.0"
dirs = "4.0"
futures = "0.3.28"
futures-util = "0.3.28"
globset = "0.4"
log = "0.4.27"
ratatui = "0.29.0"
rcgen = { version = "0.14", features = [
    "pem",
    "aws_lc_rs",
], default-features = false }
regex = "1.5"
ring = "0.17.7"
rust-embed = { version = "8.4", features = ["include-exclude"] }
rustls = { version = "0.23", features = ["aws-lc-rs", "log"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rustls-platform-verifier = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
smallvec = { version = "1.6", features = ["union"] }
thiserror = { version = "2.0.14", features = ["std"] }
time = { version = "0.3.41", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
unicase = "2.6"
uuid = { version = "1.18.1", features = ["v4"] }
quinn =  "0.11.8"
quinn-proto = "0.11.8"
bytes = "1.8.0"

[patch.crates-io]
steamworks-sys = { path = "third_party/steamworks-sys" }
