[workspace]
resolver = "2"
members = [
    "crates/forge_of_stories",
    "crates/auth",
    "crates/game_server",
    "crates/bevy_paths/bevy_paths",
    "crates/bevy_settings/bevy_settings",
    "third_party/steamworks-sys",
]
default-members = ["crates/forge_of_stories"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tim Jonas Wechler"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timjonaswechler/forge_of_stories"

[workspace.dependencies]
auth.path = "crates/auth"
fos.path = "crates/forge_of_stories"
game_server.path = "crates/game_server"
steamworks-sys.path = "third_party/steamworks-sys"
bevy_settings.path = "crates/bevy_settings/bevy_settings"
bevy_paths.path = "crates/bevy_paths/bevy_paths"

#

anyhow = { version = "1.0.80" }
base64 = "0.22.1"
bevy = { version = "0.17.2", default-features = false }
bevy_replicon = { version = "0.36.1", default-features = false }
bevy_replicon_renet = { version = "0.12.0", default-features = false }
bincode = { version = "2.0.1", features = ["serde"] }
bitflags = { version = "2.9.3", features = ["serde"] }
chrono = "0.4.42"
color-eyre = "0.6"
crossterm = "0.29.0"
dirs = "4.0"
futures = "0.3.28"
futures-util = "0.3.28"
globset = "0.4"
log = "0.4.27"
regex = "1.5"
reqwest = { version = "0.12", default-features = false}
rust-embed = { version = "8.4", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
smallvec = { version = "1.6", features = ["union"] }
thiserror = { version = "2.0.14", features = ["std"] }
time = { version = "0.3.41", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
unicase = "2.6"
uuid = { version = "1.18.1", features = ["v4"] }
quinn =  "0.11.8"
quinn-proto = "0.11.8"
bytes = "1.8.0"

[patch.crates-io]
steamworks-sys = { path = "third_party/steamworks-sys" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.47.0" }
