[package] # Game Logik
name = "aether"
description = "Aether is the core game logic for Forge of Stories, handling the game state and interactions."
version = "0.2.0"
edition.workspace = true

[dependencies]
aether_config= {workspace = true, features = ["bevy"]}
app.workspace = true
color-eyre.workspace = true
settings= {workspace = true, features = ["bevy"]}
server.workspace = true
tokio.workspace = true
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_remote",
    "bevy_state",
    "bevy_log",
    "serialize",
] }
tracing = { workspace = true }
