[package]
name = "aether_config"
version = "0.1.0"
edition.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
bevy = {version = "0.16.1", default-features = false, optional= true }
settings.workspace = true
paths.workspace = true
serde.workspace = true
color-eyre = "0.6.3"


[features]
default = []
bevy = ["dep:bevy", "settings/bevy"]
