[package]
name = "aether_config"
version = "0.1.0"
edition.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
app.workspace = true
bevy = {version = "0.17.2", default-features = false, optional= true }
color-eyre = "0.6.3"
paths.workspace = true
semver.workspace = true
settings.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true




[features]
default = []
bevy = ["dep:bevy", "settings/bevy", "app/bevy"]

[dev-dependencies]
tempfile = "3"
