[package]
name = "app"
version = "0.1.0"
edition.workspace = true


[lib]
path = "src/app.rs"

[dependencies]

chrono.workspace = true
settings.workspace = true
paths.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
