# crates/forge_app/cargo.toml

[package]
name = "forge_of_stories"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Interne Crates
forge_ui = { path = "../forge_ui" }
# forge_loader = { path = "../forge_loader" }

# Core Dependencies
bevy = { workspace = true, features = ["dynamic_linking", "file_watcher"] }
serde = { workspace = true }
ron = { workspace = true }
bevy_common_assets = { workspace = true }

# Asset Management
bevy_asset_loader = { workspace = true, features = ["standard_dynamic_assets"] }

# Tools - exakte Version angeben um Versionskonflikte zu vermeiden
bevy-inspector-egui = { version = "=0.30.0" }

# Random Number Generation
bevy_rand = { workspace = true, features = ["rand_chacha", "wyrand"] }
rand = { workspace = true }
rand_distr = { workspace = true }

# Utilities
strum = { workspace = true }
strum_macros = { workspace = true }
anyhow = { workspace = true }
derivative = { workspace = true }

[features]
default = []
# Development Features
debug = ["bevy/bevy_dev_tools", "forge_ui/debug_inspector"]
editor = ["debug"]
# UI Features
# fancy_ui = ["forge_ui/fancy_ui"]
# minimal_ui = ["forge_ui/minimal_ui"]
# Performance Features
high_performance = []
