[package]
name = "forge_of_stories"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# Interne Crates
forge_ui = { path = "../forge_ui" }

# 🔄 Workspace-Abhängigkeiten erben
bevy = { workspace = true, features = ["dynamic_linking", "file_watcher"] }
serde.workspace = true
ron.workspace = true
bevy_common_assets.workspace = true
bevy_asset_loader.workspace = true
bevy-inspector-egui.workspace = true
bevy_rand.workspace = true
rand.workspace = true
rand_distr.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
derivative.workspace = true

[features]
default = []
debug = ["bevy/bevy_dev_tools", "forge_ui/debug_inspector"]
editor = ["debug"]
