[package]
name = "forge_of_stories"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
app = {workspace = true, features = ["bevy"]}
bevy = { workspace = true, default-features = true }
settings.workspace = true
paths.workspace = true
networking = { workspace = true, features = ["client"] }
loopback = { path = "../backend/loopback", features = ["client"] }
game_server.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
bincode.workspace = true
bytes.workspace = true
uuid.workspace = true
