[package]
name = "forge_of_stories"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
app = {workspace = true, features = ["bevy"]}
bevy = { workspace = true, default-features = true}
bevy_replicon = { workspace = true ,features = ["client"]}
bevy_replicon_renet = { workspace = true ,features = ["client"]}
settings= {workspace = true, features =  ["bevy"]}
paths.workspace = true
game_server.workspace = true
keymap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
bincode.workspace = true
bytes.workspace = true
uuid.workspace = true
anyhow.workspace = true
bevy_enhanced_input = "0.19.2"
serde.workspace = true
bevy_tweening = "0.14"
