[package]
name = "forge_of_stories"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
bevy_settings= {workspace = true}
bevy_paths.workspace = true
game_server.workspace = true

bevy = { workspace = true, default-features = true}
bevy_replicon = { workspace = true ,features = ["client"]}
bevy_replicon_renet = { workspace = true ,features = ["client"]}
bevy_enhanced_input = "0.19.2"
bevy_tweening = "0.14"

chrono.workspace = true

tokio.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

bincode.workspace = true
bytes.workspace = true
uuid.workspace = true
serde.workspace = true
