[package]
name = "game_server"
version = "0.1.0"
edition.workspace = true
description = "Shared server-side game logic for Forge of Stories"

[dependencies]
bevy = { version = "0.17.0", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_state",
    "serialize",
    "bevy_color"
] }
game_protocol.workspace = true
shared.workspace = true
server.workspace = true
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "2.0"
bincode.workspace = true

[dev-dependencies]
tempfile = "3.10"
