[package]
name = "game_server"
version = "0.1.0"
edition.workspace = true
description = "Shared server-side game logic for Forge of Stories"

[dependencies]
app = { workspace = true }
bevy = { version = "0.17.2", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_state",
    "serialize",
    "bevy_color"
] }
bevy_replicon = { workspace = true, features = ["server"] }
bevy_replicon_renet = { workspace = true, features = ["server","renet_netcode","renet_steam"] }

tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "2.0"
bincode.workspace = true
tokio = { version = "1", features = ["sync"] }
bytes = "1.5"
uuid = { workspace = true, features = ["serde"] }
settings = { workspace = true }
crossbeam = "0.8.4"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
steamworks = []
