[package]
name = "keymap"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
smallvec = { workspace = true }

# Internal dependencies
paths = { path = "../paths" }
settings = { path = "../settings" }

# Optional Bevy integration
[dependencies.bevy]
version = "0.16"
optional = true
default-features = false
features = ["bevy_winit"]

[features]
default = []
bevy_plugin = ["bevy"]

[dev-dependencies]
tempfile = "3.0"
