[package]
name = "keymap"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
smallvec = { workspace = true }
indexmap = "2.2"

# Internal dependencies
paths = { path = "../paths" }
settings = { path = "../settings" }

bevy = { version = "0.17.2", default-features = false, features = ["bevy_winit"] }
bevy_enhanced_input = "0.19.1"

[features]
default = []

[dev-dependencies]
tempfile = "3.0"
