[package]
name = "server_logic"
version = "0.1.0"
edition.workspace = true
description = "Shared server-side game logic for Forge of Stories"

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.17.0", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_state",
    "serialize",
    "bevy_color"
] }
bincode.workspace = true
bytes.workspace = true
network_shared = { path = "../network/shared" }
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
