[package]
name = "settings"
version = "0.2.0"
edition.workspace = true


[lib]
path = "src/lib.rs"
# doctest = false # Enable if you want to skip doctests initially.

[dependencies]
bevy = {version = "0.16.1", default-features = false, optional= true }
bitflags.workspace = true
log.workspace = true
futures.workspace = true
paths.workspace = true
rust-embed.workspace = true
ron = "0.11.0"
serde.workspace = true
thiserror.workspace = true
config = { version = "0.14", features = ["ron"] }


[dev-dependencies]


[features]
bevy = ["dep:bevy"]
