[package]
name = "settings"
version = "0.2.0"
edition.workspace = true


[lib]
path = "src/lib.rs"
# doctest = false # Enable if you want to skip doctests initially.

[dependencies]
bevy = {version = "0.16.1", default-features = false, optional= true }
bitflags.workspace = true
log.workspace = true
futures.workspace = true
paths.workspace = true
rust-embed.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json = "1"
serde_json_lenient = "0.2"
serde_path_to_error = "0.1"
tree-sitter = "0.20"
tree-sitter-json = "0.20"

[dev-dependencies]


[features]
bevy = ["dep:bevy"]
