[package]
name = "settings"
version = "0.2.0"
edition.workspace = true


[lib]
path = "src/lib.rs"
# doctest = false # Enable if you want to skip doctests initially.

[dependencies]
bevy = {version = "0.17.0", default-features = false, optional= true }
bitflags.workspace = true
log.workspace = true
futures.workspace = true
paths.workspace = true
rust-embed.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
semver.workspace = true
serde_json_lenient = "0.2"
serde_path_to_error = "0.1"
tree-sitter = "0.25.10"
tree-sitter-json = "0.24.8"
tree-sitter-language = "0.1.5"

[dev-dependencies]
tempfile = "3"


[features]
bevy = ["dep:bevy"]
