[package]
name = "client"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
steamworks = ["dep:steamworks"]

[dependencies]
base64.workspace = true
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_remote",
    "bevy_state",
    "bevy_log",
    "serialize",
] }
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
network_shared.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
steamworks = { version = "0.12", optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
dirs.workspace = true
