[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
steamworks = ["dep:steamworks"]
steamworks-mock = []

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_remote",
    "bevy_state",
    "bevy_log",
    "serialize",
] }
network_shared.workspace = true
tokio.workspace = true
thiserror.workspace = true
futures.workspace = true
quinn.workspace = true
rcgen.workspace = true
bytes.workspace = true
rustls-pemfile.workspace = true
tracing.workspace = true
steamworks = { version = "0.7", optional = true }
