[package]
name = "server"
version = "0.2.0"
edition.workspace = true


[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "std",
    "multi_threaded",
    "bevy_remote",
    "bevy_state",
    "bevy_log",
    "serialize",
] }
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
network_shared.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
steamworks = { version = "0.7", optional = true }
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
quinn.workspace = true
quinn-proto.workspace = true
paths.workspace = true
