[package]
name = "game_protocol"
version = "0.1.0"
edition.workspace = true

[dependencies]
bevy = { workspace = true,  features = [
    "std",
    "multi_threaded",
    "bevy_state",
    "serialize",
    "bevy_color"
] }
shared.workspace = true
tracing.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "2.0"
bincode.workspace = true
