[package] # dev debug editor
name = "fate"
version = "0.1.0"
edition.workspace = true
description = "Fate is a development tool for Forge of Stories, providing a debug editor for game data."


[dependencies]
anyhow.workspace = true
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui_macros = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }

chrono = "0.4"
fake = { version = "2.10.0", features = ["dummy"] }
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
smol = "1"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
unindent = "0.2.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tree-sitter-navi = "0.2.2"
itertools = "0.14.0"
lsp-types = "0.97.0"
autocorrect = "2.14.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }
