[package] # Terminal UI
name = "wizard"
version = "0.1.0"
edition.workspace = true
description = "Wizard is the terminal UI for Forge of Stories, providing a text-based interface for players."
authors = ["your name <author@example.com>"]


# [lib]
# path = "src/lib.rs"

[dependencies]
app.workspace = true
aether_config.workspace = true
better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre.workspace = true
config = "0.14.0"
chrono = "0.4.41"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
log.workspace = true
palette = { version = "0.7.6" }
paths.workspace = true
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
settings.workspace = true
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-big-text = "0.7.1"
tui-input = "0.14.0"
tui-prompts = "0.5"
argon2 = "0.4"
rand = "0.8"
rcgen = "0.9"
time = "0.3.41"


[features]
server = []
